force-app/main/default/objects/Cook_Book__c/Cook_Book__c.object-meta.xml
<CustomObject>
    <label>Cook Book</label>
    <nameField>
        <label>Cook Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cook Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>