force-app/main/default/objects/Cook_Book__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Account_Executive__c</referenceTo>
    <relationshipLabel>Cook Books</relationshipLabel>
    <relationshipName>Cook_Books</relationshipName>
    <type>Lookup</type>
</CustomField>