force-app/main/default/objects/Cook_Book__c/fields/AccountLookup__c.field-meta.xml
<CustomField>
    <fullName>AccountLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cook Books</relationshipLabel>
    <relationshipName>Cook_Books</relationshipName>
    <type>Lookup</type>
</CustomField>