force-app/main/default/objects/Cook_Book__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Call Backs</fullName>
            </value>
            <value>
                <fullName>Demo/Trial</fullName>
                <label>ReEngage</label>
            </value>
            <value>
                <fullName>Follow up_Warm up</fullName>
                <label>Follow up/Warm up</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>2nd Meetings</fullName>
                <isActive>false</isActive>
                <label>2nd Meetings</label>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
                <isActive>false</isActive>
                <label>Voice Mail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>