force-app/main/default/objects/Cook_Book__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cook Books</relationshipLabel>
    <relationshipName>Cook_Books</relationshipName>
    <type>Lookup</type>
</CustomField>