force-app/main/default/objects/Cook_Book__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <formula>HYPERLINK(Contact__r.LinkedIN__c , Contact__r.LinkedIN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin</label>
    <type>Text</type>
</CustomField>