force-app/main/default/objects/Cook_Book__c/fields/Next_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Call__c</fullName>
    <label>Next Call</label>
    <type>DateTime</type>
</CustomField>