force-app/main/default/objects/Cook_Book__c/fields/Reassign_to_new_AE__c.field-meta.xml
<CustomField>
    <fullName>Reassign_to_new_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassign to new AE</label>
    <referenceTo>Account_Executive__c</referenceTo>
    <relationshipLabel>Cook Books (Reassign to new AE)</relationshipLabel>
    <relationshipName>Cook_Books1</relationshipName>
    <type>Lookup</type>
</CustomField>