force-app/main/default/objects/Cook_Book__c/fields/Record_Call__c.field-meta.xml
<CustomField>
    <fullName>Record_Call__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Record Call?</label>
    <type>Checkbox</type>
</CustomField>