force-app/main/default/objects/Cook_Book__c/fields/Remove_From_List__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove From List?</label>
    <type>Checkbox</type>
</CustomField>