force-app/main/default/objects/Cook_Book__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <formula>IF( CreatedBy.Profile.Name == &apos;System Administrator&apos;, &apos;Ed Quitos&apos;, &apos;Rachel Alvarez&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative</label>
    <type>Text</type>
</CustomField>