force-app/main/default/objects/Cook_Book__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Linkedin Requests</fullName>
            </value>
            <value>
                <fullName>Emails</fullName>
            </value>
            <value>
                <fullName>Drips</fullName>
            </value>
            <value>
                <fullName>Touch Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>