force-app/main/default/objects/Cook_Book__c/fields/X1st_Call__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call__c</fullName>
    <label>1st Call</label>
    <type>DateTime</type>
</CustomField>