force-app/main/default/objects/Cook_Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Call_Result__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Account_Executive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>